# napi-python

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README  package-lock.json  package.json  pyproject.toml
examples/: canvas-draw.py  extract-frames.py  webcodecs-plan.md  webcodecs-test.py  webcodecs-transcode.py
napi_python/: __init__.py  _loader.py
napi_python/_napi/: __init__.py  functions.py  types.py
napi_python/_native/: libnapi_shim.dylib  napi_shim.c
napi_python/_runtime/: __init__.py  context.py  disposable.py  env.py  external.py  handle.py  handle_scope.py  ref_tracker.py  reference.py  scope_store.py  store.py
napi_python/_threading/: __init__.py
napi_python/_values/: __init__.py  arraybuffer.py
test-addon/: Cargo.toml  package-lock.json  package.json
test-addon/src/: lib.rs
tests/: __init__.py  test-addon.py  test-arraybuffer.py  test-async.py  test-class.py
