[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napi-python"
version = "0.1.0"
description = "Load Node-API native addons in Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "napi-python contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["napi_python"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
